--- a/index.html
+++ b/index.html
@@ -56,79 +56,367 @@
   <ul>
     <li>
       <h2>
-        <a href="/o-que-e-xblue/">Promoção XBLUE</a>
+        <a href="/xblue-na-promocao/">[VEJA!] XBLUE</a>
       </h2>
-      <p>18/08/2021</p>
+      <p>19/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/lift-cha-onde-comprar-para-que-serve/">LIFT CHÁ disponível (50% de desconto)</a>
+        <a href="/lift-cha-promocao-somente-hoje/">LIFT CHÁ disponível com 50% De Desconto</a>
       </h2>
-      <p>18/08/2021</p>
+      <p>19/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/desconto-libidxtreme/">[ATENÇÃO!] LIBID XTREME CAPS</a>
+        <a href="/garantia-comprar-libid-xtreme-caps/">Libid Xtreme Caps Funciona? |【Original | Nova Fórmula Revolucionária】</a>
       </h2>
-      <p>18/08/2021</p>
+      <p>19/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/comprar-com-seguranca-iqagenda/">IQ AGENDA funciona? → [Melhor Curso de 2021 Apenas R$ 197,00/Mês]</a>
+        <a href="/promocao-iqagenda-imperdivel/">IQ Agenda funciona? → Passo a Passo por apenas R$ 197,00 ao Mês</a>
       </h2>
-      <p>18/08/2021</p>
+      <p>19/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/instaboom-desconto/">InstaBoom Até 10% OFF - Desconto</a>
+        <a href="/instaboom-e-confiavel/">[CUIDADO] Instaboom</a>
       </h2>
-      <p>18/08/2021</p>
+      <p>19/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/comprar-idiomafelino-com-desconto/">IDIOMA FELINO funciona? (Versão 2021)</a>
+        <a href="/idioma-felino-promocao-nao-perca/">Comprar Idioma Felino AGORA</a>
       </h2>
-      <p>18/08/2021</p>
+      <p>19/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/hot-blue-caps-produto-original/">Como funciona o HotBlue Caps?</a>
+        <a href="/hotblue-caps-site-blindado/">PRODUTO ORIGINAL | HOTBLUE CAPS</a>
       </h2>
-      <p>18/08/2021</p>
+      <p>19/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/hidraliso-compre-agora-o-seu/">Hidraliso - Alisante de Chuveiro funciona? | Produto 100% Natural</a>
+        <a href="/hidraliso-alisante-de-chuveiro-promocao-imperdivel/">Hidraliso - Alisante de Chuveiro funciona? | (Desconto de 76%)</a>
       </h2>
-      <p>18/08/2021</p>
+      <p>19/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/desconto-comprar-guiadoscore-7dias/">GUIA DO SCORE 7 DIAS Funciona? -【Cursos Profissionalizantes】</a>
+        <a href="/desconto-guiadoscore-7dias-compre/">DESCONTO → Guia do Score 7 Dias</a>
       </h2>
-      <p>18/08/2021</p>
+      <p>19/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/promocao-growtizze-so-hoje/">GROWTIZZE em Promoção</a>
+        <a href="/growtizze-compre-com-desconto/">Promoção Growtizze [SOMENTE HOJE]</a>
       </h2>
-      <p>18/08/2021</p>
+      <p>19/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/promocao-futebol-trade-somente-hoje/">Comprar com Garantia → FUTEBOL TRADE</a>
+        <a href="/como-funciona-o-futebol-trade-com-lucas-tylty/">[PROMOÇÃO] - Futebol Trade - Com Lucas Tylty</a>
       </h2>
-      <p>18/08/2021</p>
+      <p>19/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/comprar-com-garantia-fornecedores-restritos/">Fornecedores Restritos Funciona? - [Acesse o Site]</a>
+        <a href="/comprar-com-seguranca-fornecedoresrestritos/">Compre com Garantia → Fornecedores Restritos</a>
       </h2>
-      <p>18/08/2021</p>
+      <p>19/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/promocao-formula-digitadoronline-aproveite/">FÓRMULA DIGITADOR ONLINE |【Matricule-se hoje com 47% Off】</a>
+        <a href="/formuladigitador-online-funciona/">Fórmula Digitador Online Funciona? → [por apenas R$ 79,00 COM DESCONTO]</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/formula-despertemilionario-funciona/">FÓRMULA DESPERTE MILIONÁRIO Funciona? -【Últimas Vagas 60% de Desconto】</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/compra-segura-folixil/">O que é FOLIXIL e como funciona?</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/veja-o-metodo-imperdivel-fitlucrativo/">FIT Lucrativo funciona? → PREÇO PROMOCIONAL por TEMPO LIMITADO</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-fertilcaps-comprar/">Comprar FERTIL CAPS AGORA!</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/duratrina-e-bom/">Promoção DURATRINA [APROVEITE]</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/digitadordemarketingonline-promocao-aproveite/">Compre com Desconto | Digitador de Marketing Online</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-detox-3d/">Detox 3D funciona? | (Produto ORIGINAL | Fórmula Inédita)</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-destino-rico/">DESTINO RICO →【Últimas 3 Vagas com 66% Off】</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-comprar-clean-caps/">Clean Caps Em Promoção</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/conheca-o-centralizze/">CENTRALIZZE Com 10% de desconto! COMPRE AGORA!</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/compre-com-garantia-central-bots/">DESCONTO - CENTRALBOTS</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-canva-paranegocios-somente-hoje/">Canva para Negócios funciona? | [Bônus 100% Grátis]</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-bi-zen/">Compre com Desconto | BI-ZEN</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/acesso-imediato-airsleep/">Produto Original → AIR SLEEP</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/agenciagram-com-desconto/">Agênciagram com 10% de desconto! Compre agora!</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/academiademilionarios-compra-segura/">[ACESSE!] Academia de Milionários</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/360-slim-e-confiavel/">360 Slim funciona? (Compre com Garantia)</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-compre-macrame-passoapasso/">Macramê Passo a Passo Até 80% OFF - Desconto</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-comprar-magnifique-paris/">Pague Menos → MAGNIFIQUE PARIS</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-comprar-xpotent/">Comprar X POTENT AGORA</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-x-animal-com-desconto/">X ANIMAL disponível com 60% de Desconto</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-cursoturbobinary-agora/">[ATENÇÃO] TURBO BINARY</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/acesso-seguro-topfornecedores-ocultos/">[ATENÇÃO!] TOP FORNECEDORES OCULTOS</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-thorhammergel-com-desconto/">Thor's Hammer Gel Com Desconto</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/supertesao-devaca-compre-com-desconto/">Compre agora o seu Super Tesão de Vaca</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/sinedrol-o-que-e/">Promoção Sinedrol [SOMENTE HOJE]</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-silkskin-desconto/">[CUIDADO!] Silk Skin</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/subutramin-com-desconto/">SIBUTRAMIN Com 67% de desconto! COMPRE AGORA!</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/segredos-do-home-office-disponivel-com-desconto/">SEGREDOS DO HOME OFFICE → Versão 2021 100% Atualizada</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/segredodaloto-promocao-somente-hoje/">Segredo da Loto Com 10% De Desconto</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/manualdoscore-promocao-imperdivel/">Manual do Score Até 80% OFF | DESCONTO</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-robot-million-comprar/">Robot Million 2.0 Com 50% De Desconto</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-comprar-robo-pipoco-do-trovao/">ROBÔ PIPOCO DO TROVÃO em Promoção</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/robomilionario-promocao-nao-perca/">CURSO ROBÔ MILIONÁRIO em Promoção</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/para-que-serve-onde-comprar-mamcaps/">Mam Caps - [Parcele em 12x no cartão]</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-mapasmentaiscarreiraspoliciais-nao-perca/">Comprar com Segurança | MAPAS MENTAIS - CARREIRAS POLICIAIS</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/mb-guitaracademy-promocao-imperdivel/">Comprar com Garantia | MB GUITAR ACADEMY ESSENCIAL</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/cuidado-melannunage/">MELANNUN AGE Funciona? | (Compre Agora | Aprovado pela Anvisa)</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/metodo-monster-disponivel-com-desconto/">MÉTODO MONSTER com 67% de Desconto</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-metodotradermilionario-imperdivel/">Método Trader Milionário Até 90% OFF - DESCONTO</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/net-milionario-oferece-desconto/">NET MILIONÁRIO funciona? | (91% de Desconto)</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-power-caps-turbo/">Promoção POWERCAPS TURBO [SOMENTE HOJE]</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-profissao-homeoffice-comprar/">Compre com Garantia → PROFISSÃO HOME OFFICE</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-compre-remunera-365/">REMUNERA 365 com 10% de desconto! COMPRE AGORA!</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/conheca-o-roboafiliado/">ROBÔ AFILIADO com 25% de desconto</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-compre-robo-da-loto/">[ATENÇÃO!] ROBÔ DA LOTO</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-robo-investidor-trader-com-desconto/">ROBÔ INVESTIDOR TRADER funciona? | PREÇO PROMOCIONAL por tempo limitado</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/folixil-promocao-imperdivel/">FOLIXIL funciona? | PRODUTO ORIGINAL | Nova Fórmula Revolucionária</a>
       </h2>
       <p>18/08/2021</p>
     </li>
@@ -140,7 +428,73 @@
     </li>
     <li>
       <h2>
-        <a href="/folixil-promocao-imperdivel/">FOLIXIL funciona? | PRODUTO ORIGINAL | Nova Fórmula Revolucionária</a>
+        <a href="/promocao-formula-digitadoronline-aproveite/">FÓRMULA DIGITADOR ONLINE |【Matricule-se hoje com 47% Off】</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-com-garantia-fornecedores-restritos/">Fornecedores Restritos Funciona? - [Acesse o Site]</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-futebol-trade-somente-hoje/">Comprar com Garantia → FUTEBOL TRADE</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-growtizze-so-hoje/">GROWTIZZE em Promoção</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-comprar-guiadoscore-7dias/">GUIA DO SCORE 7 DIAS Funciona? -【Cursos Profissionalizantes】</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/hidraliso-compre-agora-o-seu/">Hidraliso - Alisante de Chuveiro funciona? | Produto 100% Natural</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/hot-blue-caps-produto-original/">Como funciona o HotBlue Caps?</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-idiomafelino-com-desconto/">IDIOMA FELINO funciona? (Versão 2021)</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/instaboom-desconto/">InstaBoom Até 10% OFF - Desconto</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-com-seguranca-iqagenda/">IQ AGENDA funciona? → [Melhor Curso de 2021 Apenas R$ 197,00/Mês]</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-libidxtreme/">[ATENÇÃO!] LIBID XTREME CAPS</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/lift-cha-onde-comprar-para-que-serve/">LIFT CHÁ disponível (50% de desconto)</a>
       </h2>
       <p>18/08/2021</p>
     </li>
@@ -243,6 +597,12 @@
     <li>
       <h2>
         <a href="/acesso-seguro-magnifiqueparis/">MAGNIFIQUE PARIS | (Dicas e Detalhes)</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/o-que-e-xblue/">Promoção XBLUE</a>
       </h2>
       <p>18/08/2021</p>
     </li>
