--- a/index.html
+++ b/index.html
@@ -56,79 +56,367 @@
   <ul>
     <li>
       <h2>
-        <a href="/xblue-na-promocao/">[VEJA!] XBLUE</a>
+        <a href="/promocao-xblue-aproveite/">XBLUE funciona? - PRODUTO ORIGINAL | Nova Fórmula Exclusiva</a>
       </h2>
-      <p>19/08/2021</p>
+      <p>20/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/lift-cha-promocao-somente-hoje/">LIFT CHÁ disponível com 50% De Desconto</a>
+        <a href="/lift-cha-adquira-o-seu/">Compre com Desconto - Lift Chá</a>
       </h2>
-      <p>19/08/2021</p>
+      <p>20/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/garantia-comprar-libid-xtreme-caps/">Libid Xtreme Caps Funciona? |【Original | Nova Fórmula Revolucionária】</a>
+        <a href="/site-blindado-libid-xtreme-caps/">Comprar com Garantia → Libid Xtreme Caps</a>
       </h2>
-      <p>19/08/2021</p>
+      <p>20/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/promocao-iqagenda-imperdivel/">IQ Agenda funciona? → Passo a Passo por apenas R$ 197,00 ao Mês</a>
+        <a href="/pague-menos-iqagenda/">IQ Agenda disponível (60% de Desconto)</a>
       </h2>
-      <p>19/08/2021</p>
+      <p>20/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/instaboom-e-confiavel/">[CUIDADO] Instaboom</a>
+        <a href="/acesso-imediato-instaboom/">Pague Menos → Instaboom</a>
       </h2>
-      <p>19/08/2021</p>
+      <p>20/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/idioma-felino-promocao-nao-perca/">Comprar Idioma Felino AGORA</a>
+        <a href="/promocao-idioma-felino-somente-hoje/">Compra Segura - IDIOMA FELINO</a>
       </h2>
-      <p>19/08/2021</p>
+      <p>20/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/hotblue-caps-site-blindado/">PRODUTO ORIGINAL | HOTBLUE CAPS</a>
+        <a href="/hotblue-caps-onde-comprar-para-que-serve/">HOTBLUE CAPS Funciona? |【Nova Fórmula Natural】</a>
       </h2>
-      <p>19/08/2021</p>
+      <p>20/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/hidraliso-alisante-de-chuveiro-promocao-imperdivel/">Hidraliso - Alisante de Chuveiro funciona? | (Desconto de 76%)</a>
+        <a href="/comprar-com-garantia-hidraliso-alisante-de-chuveiro/">Hidraliso funciona? → [Preço Promocional por tempo limitado]</a>
       </h2>
-      <p>19/08/2021</p>
+      <p>20/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/desconto-guiadoscore-7dias-compre/">DESCONTO → Guia do Score 7 Dias</a>
+        <a href="/guia-do-score-e-bom/">[VEJA!] SCORE EM 7 DIAS</a>
       </h2>
-      <p>19/08/2021</p>
+      <p>20/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/growtizze-compre-com-desconto/">Promoção Growtizze [SOMENTE HOJE]</a>
+        <a href="/atencao-growtizze/">GROWTIZZE funciona? | (Aprenda com este Método Simplificado)</a>
       </h2>
-      <p>19/08/2021</p>
+      <p>20/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/como-funciona-o-futebol-trade-com-lucas-tylty/">[PROMOÇÃO] - Futebol Trade - Com Lucas Tylty</a>
+        <a href="/confira-futebol-trade/">[CONFIRA!] FUTEBOL TRADE - COM LUCAS TYLTY</a>
       </h2>
-      <p>19/08/2021</p>
+      <p>20/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/comprar-com-seguranca-fornecedoresrestritos/">Compre com Garantia → Fornecedores Restritos</a>
+        <a href="/compre-com-desconto-fornecedores-restritos/">Fornecedores Restritos disponível (75% De Desconto)</a>
       </h2>
-      <p>19/08/2021</p>
+      <p>20/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/formuladigitador-online-funciona/">Fórmula Digitador Online Funciona? → [por apenas R$ 79,00 COM DESCONTO]</a>
+        <a href="/acesso-seguro-formula-digitadoronline/">Fórmula Digitador Online - Preço Promocional por TEMPO LIMITADO</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/formula-desperte-milionario-funciona/">FÓRMULA DESPERTE MILIONÁRIO funciona? - [Aprenda com este Método Simplificado]</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-folixil-agora-com-desconto/">FOLIXIL Funciona? 【Compra Segura】</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/fitlucrativo-disponivel-desconto/">Pague Menos | FIT LUCRATIVO</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/fertilcaps-menor-preco/">FERTIL CAPS → [Compre Agora Com 50% Off]</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-compre-duratrina/">DURATRINA na Promoção</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-com-seguranca-digitador-de-marketing-online/">Compra Segura → DIGITADOR DE MARKETING ONLINE</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-compre-detox3d/">[PROMOÇÃO] - DETOX 3D</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-destino-rico-nao-perca/">Compra Segura - Destino Rico</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/clean-caps-disponivel-desconto/">CLEAN CAPS Até 60% OFF | Desconto</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/compre-com-desconto-centralizze/">[ACESSE] Centralizze</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/central-bots-disponivel-com-desconto/">CENTRAL BOTS com Menor Preço</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/canvapara-negocios-funciona/">Canva para Negócios funciona? - (+ Bônus Incrível)</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/bi-zen-comprar-com-garantia/">BI-ZEN disponível com 40% de Desconto</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/para-que-serve-onde-comprar-air-sleep/">[ATENÇÃO!] AIR SLEEP</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-agenciagram-somente-hoje/">Compra Segura | AGÊNCIAGRAM</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-academiademilionarios/">[ACESSO SEGURO] ACADEMIA DE MILIONÁRIOS</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/360-slim-para-que-serve-onde-comprar/">Compra Segura → 360 Slim</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/macrame-passoapasso-promocao/">MACRAMÊ PASSO A PASSO Funciona? - [Estude em Casa e Economize]</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/acesso-imediato-magnifique-paris/">Pague Menos | MAGNIFIQUE PARIS</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/o-que-e-onde-comprar-x-potent/">XPOTENT disponível com 29% de desconto</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/xanimal-promocao-somente-hoje/">X-Animal - Acesse a Página</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-curso-turbo-binary-aproveite/">[VEJA] Turbo Binary</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-comprar-top-fornecedoresocultos/">Comprar Top Fornecedores Ocultos AGORA</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/onde-comprar-o-que-e-thorshammergel/">DESCONTO → Thor's Hammer Gel</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-supertesao-devaca-desconto/">Super Tesão de Vaca |【Produto Aprovado pela Anvisa | Fórmula Inédita】</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-sinedrol-desconto/">DESCONTO → SINEDROL</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/para-que-serve-onde-comprar-silk-skin/">SILK SKIN Funciona? | Original | Fórmula Revolucionária</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/subutramin-disponivel-desconto/">SIBUTRAMIN → (Original | Fórmula Natural)</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/como-funciona-o-segredos-do-home-office/">SEGREDOS DO HOME OFFICE disponível (90% de Desconto)</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/segredodaloto-oferece-desconto/">[ACESSO IMEDIATO] SEGREDO DA LOTO</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/site-blindado-manualdoscore/">Score Manual Com 80% de desconto! Compre agora!</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-robotmillion-2-0-somente-hoje/">ROBOT MILLION disponível (50% De Desconto)</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/conheca-o-robo-pipocodotrovao/">Robô Pipoco do Trovão com Menor Preço</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/curso-robomilionario-funciona/">CURSO ROBÔ MILIONÁRIO →【SUPER PROMOÇÃO】</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/mamcaps-e-confiavel-original-formula-exclusiva/">Compra Segura | MAM CAPS</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/mapas-mentais-carreiras-policiais-compre-com-desconto/">MAPAS MENTAIS CARREIRAS POLICIAIS - [Resultados Reais]</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/conheca-o-mbguitaracademy-essencial/">MB Guitar Academy → [Curso Completo Online]</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/o-que-e-para-que-serve-melannunage/">MELANNUN AGE oferece 30% de desconto</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-metodo-monster-compre/">MÉTODO MONSTER →【Por apenas R$ 97,00 NO DESCONTO】</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-metodo-trader-milionario-compre/">MÉTODO TRADER MILIONÁRIO com 90% de desconto! Compre agora!</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/netmilionario-desconto/">Comprar NET MILIONÁRIO com Desconto</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/powercaps-turbo-o-que-e-para-que-serve/">Power Caps Turbo funciona? (Compre Agora | Fórmula Revolucionária)</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-profissao-home-office-aproveite/">Pague Menos | PROFISSÃO HOME OFFICE</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/remunera-365-20-e-confiavel-desconto-apenas-hoje/">[ACESSE!] REMUNERA 365</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-robo-afiliado-compre/">Robô Afiliado disponível com 25% De Desconto</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/como-funciona-o-robodaloto/">ROBÔ DA LOTO funciona? → [Metodologia que Funciona]</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-roboinvestidortrader-somente-hoje/">Comprar com Garantia - ROBÔ INVESTIDOR TRADER</a>
+      </h2>
+      <p>20/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/compra-segura-folixil/">O que é FOLIXIL e como funciona?</a>
       </h2>
       <p>19/08/2021</p>
     </li>
@@ -140,7 +428,73 @@
     </li>
     <li>
       <h2>
-        <a href="/compra-segura-folixil/">O que é FOLIXIL e como funciona?</a>
+        <a href="/formuladigitador-online-funciona/">Fórmula Digitador Online Funciona? → [por apenas R$ 79,00 COM DESCONTO]</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-com-seguranca-fornecedoresrestritos/">Compre com Garantia → Fornecedores Restritos</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/como-funciona-o-futebol-trade-com-lucas-tylty/">[PROMOÇÃO] - Futebol Trade - Com Lucas Tylty</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/growtizze-compre-com-desconto/">Promoção Growtizze [SOMENTE HOJE]</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-guiadoscore-7dias-compre/">DESCONTO → Guia do Score 7 Dias</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/hidraliso-alisante-de-chuveiro-promocao-imperdivel/">Hidraliso - Alisante de Chuveiro funciona? | (Desconto de 76%)</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/hotblue-caps-site-blindado/">PRODUTO ORIGINAL | HOTBLUE CAPS</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/idioma-felino-promocao-nao-perca/">Comprar Idioma Felino AGORA</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/instaboom-e-confiavel/">[CUIDADO] Instaboom</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-iqagenda-imperdivel/">IQ Agenda funciona? → Passo a Passo por apenas R$ 197,00 ao Mês</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-comprar-libid-xtreme-caps/">Libid Xtreme Caps Funciona? |【Original | Nova Fórmula Revolucionária】</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/lift-cha-promocao-somente-hoje/">LIFT CHÁ disponível com 50% De Desconto</a>
       </h2>
       <p>19/08/2021</p>
     </li>
@@ -243,6 +597,12 @@
     <li>
       <h2>
         <a href="/desconto-comprar-magnifique-paris/">Pague Menos → MAGNIFIQUE PARIS</a>
+      </h2>
+      <p>19/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/xblue-na-promocao/">[VEJA!] XBLUE</a>
       </h2>
       <p>19/08/2021</p>
     </li>
